--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,12 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "command": "npm run wdio",
+            "name": "Run tests",
+            "request": "launch",
+            "type": "node-terminal"
+        }
+    ]
 }
