--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,11 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Ignore Allure report directories
+allure-report/
+allure-results/
+
+# Ignore log4js log directory
+logs/
+
