--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "type": "module",
   "scripts": {
     "test": "test",
-    "wdio": "wdio run ./wdio.conf.cjs"
+    "wdio": "wdio run ./wdio.conf.js"
   },
   "author": "Elena Nikolova",
   "license": "ISC",
   "devDependencies": {
+    "@wdio/allure-reporter": "^8.29.3",
     "@wdio/cli": "^8.27.1",
     "@wdio/local-runner": "^8.27.0",
     "@wdio/mocha-framework": "^8.27.0",
@@ -18,6 +19,7 @@
     "wdio-wait-for": "^3.0.10"
   },
   "dependencies": {
-    "chai": "^5.0.0"
+    "chai": "^5.0.0",
+    "log4js": "^6.9.1"
   }
 }
